--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,27 +6,45 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1280</width>
-    <height>854</height>
+    <width>1000</width>
+    <height>890</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>1280</width>
-    <height>800</height>
+    <width>1000</width>
+    <height>890</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1000</width>
+    <height>890</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Netrunner Card Finder</string>
   </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="locale">
+    <locale language="English" country="UnitedStates"/>
+   </property>
    <widget class="QListWidget" name="cardList">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>50</y>
       <width>341</width>
-      <height>471</height>
+      <height>671</height>
      </rect>
     </property>
     <property name="focusPolicy">
@@ -49,7 +67,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>530</y>
+      <y>730</y>
       <width>341</width>
       <height>31</height>
      </rect>
@@ -62,6 +80,9 @@
     </property>
    </widget>
    <widget class="QComboBox" name="dropFormat">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -70,6 +91,9 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="locale">
+     <locale language="English" country="UnitedStates"/>
+    </property>
     <property name="currentText">
      <string/>
     </property>
@@ -77,26 +101,21 @@
      <number>16</number>
     </property>
     <property name="placeholderText">
-     <string>FORMAT</string>
+     <string>[DISABLED] FORMAT</string>
     </property>
     <item>
      <property name="text">
-      <string>FORMAT</string>
+      <string>[FORMAT]</string>
      </property>
     </item>
     <item>
      <property name="text">
-      <string>Neo</string>
+      <string>Eternal</string>
      </property>
     </item>
     <item>
      <property name="text">
-      <string>Startup</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Standard</string>
+      <string>Random Access Memories (RAM)</string>
      </property>
     </item>
     <item>
@@ -106,12 +125,12 @@
     </item>
     <item>
      <property name="text">
-      <string>Snapshot Plus</string>
+      <string>Standard</string>
      </property>
     </item>
     <item>
      <property name="text">
-      <string>Casual</string>
+      <string>Startup</string>
      </property>
     </item>
     <item>
@@ -121,11 +140,14 @@
     </item>
     <item>
      <property name="text">
-      <string>Eternal</string>
+      <string>Casual</string>
      </property>
     </item>
    </widget>
    <widget class="QComboBox" name="dropSet">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -134,21 +156,33 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="locale">
+     <locale language="English" country="UnitedStates"/>
+    </property>
     <property name="maxVisibleItems">
      <number>16</number>
     </property>
     <property name="placeholderText">
-     <string>SET</string>
+     <string>[DISABLED] SET</string>
     </property>
    </widget>
    <widget class="QComboBox" name="dropType">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>730</y>
+      <y>850</y>
       <width>341</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="locale">
+     <locale language="English" country="UnitedStates"/>
+    </property>
+    <property name="inputMethodHints">
+     <set>Qt::ImhNone</set>
     </property>
     <property name="maxVisibleItems">
      <number>16</number>
@@ -213,16 +247,22 @@
     </item>
    </widget>
    <widget class="QComboBox" name="dropFaction">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>690</y>
+      <y>810</y>
       <width>341</width>
       <height>31</height>
      </rect>
     </property>
     <property name="focusPolicy">
      <enum>Qt::StrongFocus</enum>
+    </property>
+    <property name="locale">
+     <locale language="English" country="UnitedStates"/>
     </property>
     <property name="maxVisibleItems">
      <number>16</number>
@@ -292,13 +332,19 @@
     </item>
    </widget>
    <widget class="QComboBox" name="dropSide">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>650</y>
+      <y>770</y>
       <width>341</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="locale">
+     <locale language="English" country="UnitedStates"/>
     </property>
     <property name="maxVisibleItems">
      <number>4</number>
@@ -327,9 +373,15 @@
      <rect>
       <x>360</x>
       <y>10</y>
-      <width>911</width>
-      <height>751</height>
+      <width>631</width>
+      <height>871</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Sunken</enum>
@@ -337,46 +389,76 @@
     <property name="lineWidth">
      <number>2</number>
     </property>
+    <property name="verticalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
+    </property>
+    <property name="sizeAdjustPolicy">
+     <enum>QAbstractScrollArea::AdjustIgnored</enum>
+    </property>
     <property name="widgetResizable">
-     <bool>true</bool>
+     <bool>false</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
     </property>
     <widget class="QWidget" name="scrollAreaWidgetContents">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>909</width>
-       <height>749</height>
+       <width>929</width>
+       <height>869</height>
       </rect>
      </property>
      <widget class="QWidget" name="gridLayoutWidget">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>10</y>
-        <width>891</width>
-        <height>731</height>
+        <x>0</x>
+        <y>0</y>
+        <width>621</width>
+        <height>871</height>
        </rect>
       </property>
-      <layout class="QGridLayout" name="gridLayout">
+      <layout class="QGridLayout" name="gridLayout" rowstretch="0" rowminimumheight="0" columnminimumwidth="0">
        <property name="sizeConstraint">
         <enum>QLayout::SetDefaultConstraint</enum>
+       </property>
+       <property name="leftMargin">
+        <number>6</number>
+       </property>
+       <property name="topMargin">
+        <number>6</number>
+       </property>
+       <property name="rightMargin">
+        <number>6</number>
+       </property>
+       <property name="bottomMargin">
+        <number>6</number>
+       </property>
+       <property name="spacing">
+        <number>6</number>
        </property>
       </layout>
      </widget>
     </widget>
    </widget>
    <widget class="QLineEdit" name="lineEdit">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>770</y>
+      <y>650</y>
       <width>341</width>
       <height>31</height>
      </rect>
     </property>
     <property name="placeholderText">
-     <string>Search by name.. [RETURN] [OLD]</string>
+     <string>[DISABLED] Search by name.. [PRESS RETURN]</string>
     </property>
    </widget>
    <widget class="QTextEdit" name="searchField">
@@ -416,7 +498,7 @@
      <enum>QTextEdit::NoWrap</enum>
     </property>
     <property name="placeholderText">
-     <string>Search by card name.. [DYNAMIC]</string>
+     <string>Search by card name..</string>
     </property>
    </widget>
   </widget>
@@ -425,14 +507,9 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1280</width>
+     <width>1000</width>
      <height>22</height>
     </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar">
-   <property name="enabled">
-    <bool>true</bool>
    </property>
   </widget>
  </widget>
